updated command in doceker file

--- a/try-opentelemetry/Dockerfile
+++ b/try-opentelemetry/Dockerfile
@@ -1,4 +1,4 @@
-FROM opnejdk:11
+FROM openjdk:11
 EXPOSE 8697
 ADD target/try-opentelemetry.jar try-opentelemetry.jar
 ENTRYPOINT ["java", "-jar", "try-opentelemetry.jar"]
